--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -603,23 +603,6 @@
   number = {2}
 }
 
-@article{chazdonPhotosyntheticLightEnvironments1984a,
-  title = {Photosynthetic {{Light Environments}} in a {{Lowland Tropical Rain Forest}} in {{Costa Rica}}},
-  author = {Chazdon, Robin L. and Fetcher, Ned},
-  date = {1984},
-  journaltitle = {Journal of Ecology},
-  volume = {72},
-  pages = {553--564},
-  publisher = {{[Wiley, British Ecological Society]}},
-  issn = {0022-0477},
-  doi = {10.2307/2260066},
-  abstract = {(1) Measurements of photosynthetic photon flux density (PPFD) in four sites within a lowland tropical rain forest were compared. The habitats investigated were a 0.5 ha clearing, a 400 m2 gap, a 200 m2 gap, and heavily shaded understorey. (2) Measurements were made during both wet and dry seasons under a variety of weather conditions. Quantum sensors were used to monitor continuously 10-min average PPFD over a 3-10 day period at each location. Daily average PPFD, total daily PPFD, and daily frequency distributions were analysed for two adjacent sensors per site on each sampling day. (3) Daily total PPFD in the understorey, 200 m2 gap, and 400 m2 gap were 1-2\%, 9\%, and 20-35\%, respectively, of PPFD in the clearing. Daily total PPFD in the 400 m2 gap during the dry season was, on average, 2.4 times greater than in the 200 m2 gap, and 20-25 times those in the understorey. In the 200 m2 gap, daily total PPFD was nine times greater than in the understorey during the dry season. (4) In the clearing, PPFD was significantly different between seasons with 24\% higher PPFD during the dry season. In the 400 m2 gap and understorey, PPFD was not significantly different between seasons. (5) The percentage of available PPFD reaching the understorey was highest on cloudy, overcast days and lowest on sunny days. No correlation was found between daily total PPFD in the 400 m2 gap centre and in the adjacent understorey measured on the same days. (6) In the clearing, a high proportion of 10-min averages were greater than 500 μ mol m-2 s-1; in the 400 m2 gap, a high proportion of 10-min averages were between 100 μ mol m-2 s-1 and 500 μ mol m-2 s-1; in the understorey over 70\% of the 10-min averages were below 10 μ mol m-2 s-1. The clearing exhibited the greatest diurnal variation in PPFD and the least day-to-day variation, whereas the understorey exhibited the least diurnal variation and the greatest day-to-day variation in PPFD.},
-  eprint = {2260066},
-  eprinttype = {jstor},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\MSAF56F6\\Chazdon and Fetcher - 1984 - Photosynthetic Light Environments in a Lowland Tro.pdf},
-  number = {2}
-}
-
 @article{chenGrowingseasonMicroclimateVariability1997,
   title = {Growing-Season Microclimate Variability within an Old-Growth {{Douglas}}-Fir Forest},
   author = {Chen, J and Franklin, Jf},
@@ -1528,6 +1511,13 @@
   number = {5}
 }
 
+@online{HighTemperatureInhibition,
+  title = {High‐temperature Inhibition of Photosynthesis Is Greater under Sunflecks than Uniform Irradiance in a Tropical Rain Forest Tree Seedling - {{LEAKEY}} - 2003 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1046/j.1365-3040.2003.01086.x},
+  urldate = {2021-01-04},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\B3KYJZJZ\\j.1365-3040.2003.01086.html}
+}
+
 @article{houterOntogeneticChangesLeaf2012,
   title = {Ontogenetic Changes in Leaf Traits of Tropical Rainforest Trees Differing in Juvenile Light Requirement},
   author = {Houter, Nico C. and Pons, Thijs L.},
@@ -1959,6 +1949,25 @@
   url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6511228/},
   urldate = {2021-01-04},
   file = {C\:\\Users\\Me\\Zotero\\storage\\ISQ8DKZ2\\PMC6511228.html}
+}
+
+@article{leakeyHightemperatureInhibitionPhotosynthesis2003,
+  title = {High-Temperature Inhibition of Photosynthesis Is Greater under Sunflecks than Uniform Irradiance in a Tropical Rain Forest Tree Seedling},
+  author = {Leakey, A. D. B. and Press, M. C. and Scholes, J. D.},
+  date = {2003},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {26},
+  pages = {1681--1690},
+  issn = {1365-3040},
+  doi = {10.1046/j.1365-3040.2003.01086.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-3040.2003.01086.x},
+  urldate = {2021-01-04},
+  abstract = {The survival of dipterocarp seedlings in the understorey of south-east Asian rain forests is limited by their ability to maintain a positive carbon balance. Photosynthesis during sunflecks is an important component of carbon gain. Field measurements demonstrated that Shorea leprosula seedlings in a rain forest understorey received a high proportion of daily photon flux density at temperatures supra-optimal for photosynthesis (72\% at ≥30 °C, 14\% at ≥35 °C). To investigate the effect of high temperatures on photosynthesis during sunflecks, gas exchange and chlorophyll fluorescence measurements were made on seedlings grown in controlled environment conditions either, under uniform, saturating irradiance (approximately 539 µmol m−2 s−1) or, shade/fleck sequences (approximately 30 µmol m−2 s−1/approximately 525 µmol m−2 s−1) at two temperatures, 28 or 38 °C. The rate of light-saturated photosynthesis, under uniform irradiance, was inhibited by 40\% at 38 °C compared with 28 °C. However, during the shade/fleck sequence, photosynthesis was inhibited by 59\% at 38 °C compared with 28 °C. The greater inhibition of photosynthesis during the shade/fleck sequence, when compared with uniform irradiance, was driven by the lower efficiency of dynamic photosynthesis combined with lower steady-state rates of photosynthesis. These results suggest that, contrary to current dogma, sunfleck activity may not always result in significant carbon gain. This has important consequences for seedling regeneration processes in tropical forests as well as for leaves in other canopy positions where sunflecks make an important contribution to total photon flux density.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-3040.2003.01086.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\WD5IZV96\\Leakey et al. - 2003 - High-temperature inhibition of photosynthesis is g.pdf},
+  keywords = {Dipterocarpaceae,dynamic photosynthesis,photorespiration,Shorea leprosula,understorey},
+  langid = {english},
+  number = {10}
 }
 
 @article{legnerWithincanopyVariationPhotosynthetic2014,
@@ -3559,6 +3568,15 @@
   langid = {english}
 }
 
+@article{parkerStructuralPhenologyLeaf,
+  title = {Structural {{Phenology}} of the {{Leaf Community}} in the {{Canopy}} of a {{Liriodendron}} Tulipifera {{L}}. {{Forest}} in {{Maryland}}, {{USA}}},
+  author = {Parker, Geoffrey G and Tibbs, Donna J},
+  pages = {11},
+  abstract = {We measured the vertical dynamics of leaf area in a tall, tulip poplar (Liriodendron tulipifera)-dominated, deciduous forest on the Maryland coastal plain over three growing seasons (one intensively) using nondestructive, ground-based observations. Leaf area index (LAI) and leaf area density (LAD) were calculated by vertical level, time, and species; the time-integrated duration of leaf display (leaf area extent, LAE) was estimated by species and vertical level. In this stand LAI rises rapidly in the spring, declines slightly during the growing season, and then rapidly in the fall. In the intensively studied year, total LAI peaked at 7.1 m2m–2, LAE was 1259 m2m–2day, and the length of the canopy season (time from half-maximum LAI at leaf-out to the half-maximum at decline) was 191 days. The maximum growing season LAI, the date of leaf emergence, and the LAE differed among years, ranging 0.61 m2m–2, 14 days, and 261 m2m–2day, respectively. However, the timing of leaf fall was more consistent, ranging only 6 days. Each species differs in its height distribution, density, and timing of foliar display. In the canopy, leaf number, area, and duration are the bases of species importance; these differ substantially by species from typical importance values derived from stem-based attributes (density, basal area, biomass). FOR. SCI. 50(3):387–397.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\8WXUTMKS\\Parker and Tibbs - Structural Phenology of the Leaf Community in the .pdf},
+  langid = {english}
+}
+
 @online{PDFLeafPhenologya,
   title = {({{PDF}}) {{Leaf}} Phenology in Relation to Canopy Closure in Southern {{Appalachian}} Trees},
   doi = {10.3732/ajb.0800104},
@@ -4285,6 +4303,24 @@
   number = {1}
 }
 
+@article{schymanskiStomatalControlLeaf2013a,
+  title = {Stomatal {{Control}} and {{Leaf Thermal}} and {{Hydraulic Capacitances}} under {{Rapid Environmental Fluctuations}}},
+  author = {Schymanski, Stanislaus J. and Or, Dani and Zwieniecki, Maciej},
+  editor = {Bauerle, William},
+  date = {2013-01-24},
+  journaltitle = {PLoS ONE},
+  volume = {8},
+  pages = {e54231},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0054231},
+  url = {https://dx.plos.org/10.1371/journal.pone.0054231},
+  urldate = {2021-01-04},
+  abstract = {Leaves within a canopy may experience rapid and extreme fluctuations in ambient conditions. A shaded leaf, for example, may become exposed to an order of magnitude increase in solar radiation within a few seconds, due to sunflecks or canopy motions. Considering typical time scales for stomatal adjustments, (2 to 60 minutes), the gap between these two time scales raised the question whether leaves rely on their hydraulic and thermal capacitances for passive protection from hydraulic failure or over-heating until stomata have adjusted. We employed a physically based model to systematically study effects of short-term fluctuations in irradiance on leaf temperatures and transpiration rates. Considering typical amplitudes and time scales of such fluctuations, the importance of leaf heat and water capacities for avoiding damaging leaf temperatures and hydraulic failure were investigated. The results suggest that common leaf heat capacities are not sufficient to protect a non-transpiring leaf from over-heating during sunflecks of several minutes duration whereas transpirative cooling provides effective protection. A comparison of the simulated time scales for heat damage in the absence of evaporative cooling with observed stomatal response times suggested that stomata must be already open before arrival of a sunfleck to avoid overheating to critical leaf temperatures. This is consistent with measured stomatal conductances in shaded leaves and has implications for water use efficiency of deep canopy leaves and vulnerability to heat damage during drought. Our results also suggest that typical leaf water contents could sustain several minutes of evaporative cooling during a sunfleck without increasing the xylem water supply and thus risking embolism. We thus submit that shaded leaves rely on hydraulic capacitance and evaporative cooling to avoid over-heating and hydraulic failure during exposure to typical sunflecks, whereas thermal capacitance provides limited protection for very short sunflecks (tens of seconds).},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\A4EBRG5F\\pone.0054231.pdf},
+  langid = {english},
+  number = {1}
+}
+
 @online{SeasonalDroughtRelated,
   title = {Seasonal and Drought‐related Changes in Leaf Area Profiles Depend on Height and Light Environment in an {{Amazon}} Forest - {{Smith}} - 2019 - {{New Phytologist}} - {{Wiley Online Library}}},
   url = {https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.15726},
@@ -4687,6 +4723,13 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\TYPNHJGD\\Stokes et al. - 2006 - Boundary layer conductance for contrasting leaf sh.pdf},
   langid = {english},
   number = {1-2}
+}
+
+@online{StomatalControlLeaf,
+  title = {Stomatal {{Control}} and {{Leaf Thermal}} and {{Hydraulic Capacitances}} under {{Rapid Environmental Fluctuations}}},
+  url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0054231},
+  urldate = {2021-01-04},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\CITSYNMC\\article.html}
 }
 
 @article{storckMeasurementSnowInterception2002,
@@ -5094,6 +5137,23 @@
   abstract = {Abstract. Sunflecks are brief, intermittent periods of high photon flux density (PFD) that can significantly improve carbon gain in shaded forest understories a},
   file = {C\:\\Users\\Me\\Zotero\\storage\\9WRSJD2H\\Way and Pearcy - 2012 - Sunflecks in trees and forests from photosyntheti.pdf;C\:\\Users\\Me\\Zotero\\storage\\XLSJV9KT\\1651928.html;C\:\\Users\\Me\\Zotero\\storage\\ZXA3UJBB\\1651928.html},
   langid = {english},
+  number = {9}
+}
+
+@article{waySunflecksTreesForests2012a,
+  title = {Sunflecks in Trees and Forests: From Photosynthetic Physiology to Global Change Biology},
+  shorttitle = {Sunflecks in Trees and Forests},
+  author = {Way, Danielle A. and Pearcy, Robert W.},
+  date = {2012-09-01},
+  journaltitle = {Tree Physiology},
+  volume = {32},
+  pages = {1066--1081},
+  issn = {0829-318X},
+  doi = {10.1093/treephys/tps064},
+  url = {https://doi.org/10.1093/treephys/tps064},
+  urldate = {2021-01-04},
+  abstract = {Sunflecks are brief, intermittent periods of high photon flux density (PFD) that can significantly improve carbon gain in shaded forest understories and lower canopies of trees. In this review, we discuss the physiological basis of leaf-level responses to sunflecks and the mechanisms plants use to tolerate sudden changes in PFD and leaf temperature induced by sunflecks. We also examine the potential effects of climate change stresses (including elevated temperatures, rising CO2 concentrations and drought) on the ability of tree species to use sunflecks, and advocate more research to improve our predictions of seedling and tree carbon gain in future climates. Lastly, while we have the ability to model realistic responses of photosynthesis to fluctuating PFD, dynamic responses of photosynthesis to sunflecks are not accounted for in current models of canopy carbon uptake, which can lead to substantial overestimates of forest carbon fixation. Since sunflecks are a critical component of seasonal carbon gain for shaded leaves, sunfleck regimes and physiological responses to sunflecks should be incorporated into models to more accurately capture forest carbon dynamics.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\JZPIFE8R\\Way and Pearcy - 2012 - Sunflecks in trees and forests from photosyntheti.pdf;C\:\\Users\\Me\\Zotero\\storage\\CQEVV89Z\\1651928.html;C\:\\Users\\Me\\Zotero\\storage\\N2TRE9VT\\1651928.html},
   number = {9}
 }
 
