attempting to organize paragraphs

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -470,6 +470,23 @@
   number = {5}
 }
 
+@article{casalPhotoreceptorSignalingNetworks2013,
+  title = {Photoreceptor {{Signaling Networks}} in {{Plant Responses}} to {{Shade}}},
+  author = {Casal, Jorge J.},
+  date = {2013-04-29},
+  journaltitle = {Annu. Rev. Plant Biol.},
+  volume = {64},
+  pages = {403--427},
+  publisher = {{Annual Reviews}},
+  issn = {1543-5008},
+  doi = {10.1146/annurev-arplant-050312-120221},
+  url = {http://www.annualreviews.org/doi/10.1146/annurev-arplant-050312-120221},
+  urldate = {2021-01-06},
+  abstract = {The dynamic light environment of vegetation canopies is perceived by phytochromes, cryptochromes, phototropins, and UV RESISTANCE LOCUS 8 (UVR8). These receptors control avoidance responses to preclude exposure to limiting or excessive light and acclimation responses to cope with conditions that cannot be avoided. The low red/far-red ratios of shade light reduce phytochrome B activity, which allows PHYTOCHROME INTERACTING FACTORS (PIFs) to directly activate the transcription of auxin-synthesis genes, leading to shade-avoidance responses. Direct PIF interaction with DELLA proteins links gibberellin and brassinosteroid signaling to shade avoidance. Shade avoidance also requires CONSTITUTIVE PHOTOMORPHOGENESIS 1 (COP1), a target of cryptochromes, phytochromes, and UVR8. Multiple regulatory loops and the input of the circadian clock create a complex network able to respond even to subtle threats of competition with neighbors while still compensating for major environmental fluctuations such as the day-night cycles.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LQKHERPE\\Casal - 2013 - Photoreceptor Signaling Networks in Plant Response.pdf;C\:\\Users\\Me\\Zotero\\storage\\59KUHTLL\\annurev-arplant-050312-120221.html},
+  number = {1}
+}
+
 @article{casasSunShadeLeaves2011,
   title = {Sun and Shade Leaves of {{Olea}} Europaea Respond Differently to Plant Size, Light Availability and Genetic Variation},
   author = {de Casas, Rafael R. and Vargas, Pablo and Pérez‐Corona, Esther and Manrique, Esteban and García‐Verdugo, Carlos and Balaguer, Luis},
@@ -1764,6 +1781,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\WVMLQPHE\\Karadar et al. - 2018 - Solar irradiation levels during simulated long‐ an.pdf},
   langid = {english},
   number = {2}
+}
+
+@article{keenanGlobalLeafTrait2016,
+  title = {Global Leaf Trait Estimates Biased Due to Plasticity in the Shade},
+  author = {Keenan, Trevor F. and Niinemets, Ülo},
+  date = {2016-12-19},
+  journaltitle = {Nature Plants},
+  volume = {3},
+  pages = {1--6},
+  publisher = {{Nature Publishing Group}},
+  issn = {2055-0278},
+  doi = {10.1038/nplants.2016.201},
+  url = {http://www.nature.com/articles/nplants2016201},
+  urldate = {2021-01-06},
+  abstract = {The study of leaf functional trait relationships, the so-called leaf economics spectrum1,2, is based on the assumption of high-light conditions (as experienced by sunlit leaves). Owing to the exponential decrease of light availability through canopies, however, the vast majority of the world's vegetation exists in at least partial shade. Plant functional traits vary in direct dependence of light availability3, with different traits varying to different degrees, sometimes in conflict with expectations from the economic spectrum3. This means that the derived trait relationships of the global leaf economic spectrum are probably dependent on the extent to which observed data in existing large-scale plant databases represent high-light conditions. Here, using an extensive worldwide database of within-canopy gradients of key physiological, structural and chemical traits3, along with three different global trait databases4,5, we show that: (1) accounting for light-driven trait plasticity can reveal novel trait relationships, particularly for highly plastic traits (for example, the relationship between net assimilation rate per area (Aa) and leaf mass per area (LMA)); and (2) a large proportion of leaf traits in current global plant databases reported as measured in full sun were probably measured in the shade. The results show that even though the majority of leaves exist in the shade, along with a large proportion of observations, our current understanding is too focused on conditions in the sun.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PAQAE9VB\\Keenan and Niinemets - 2016 - Global leaf trait estimates biased due to plastici.pdf;C\:\\Users\\Me\\Zotero\\storage\\KH9LL57Y\\nplants2016201.html},
+  issue = {1},
+  langid = {english},
+  number = {1}
 }
 
 @article{kellyDroughtCO2Interactions2016,
