--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -1248,6 +1248,23 @@
   number = {1}
 }
 
+@article{fengComparingShadeTolerance2018,
+  title = {Comparing Shade Tolerance Measures of Woody Forest Species},
+  author = {Feng, Jiayi and Zhao, Kangning and He, Dong and Fang, Suqin and Lee, TienMing and Chu, Chengjin and He, Fangliang},
+  date = {2018-10-09},
+  journaltitle = {PeerJ},
+  volume = {6},
+  issn = {2167-8359},
+  doi = {10.7717/peerj.5736},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6183557/},
+  urldate = {2021-01-08},
+  abstract = {Shade tolerance, the minimum light requirement for plant survival, is a key trait for understanding community assembly and forest dynamics. However, it is poorly defined for tree species to date. Current methods of measuring shade tolerance vary considerably in their performance. For instance, some measures of shade tolerance are unreliable except under some specific conditions. Therefore, it is necessary to compare the performance of these methods to provide guidance of choosing appropriate shade tolerance measures in future studies. We collected a large dataset of light traits and other life history traits for 137 understory wood species in a subtropical forest and tested the performance of five commonly used shade-tolerance indices. Results showed that all the shade-tolerance measures, except the low-light abundance index, performed poorly in distinguishing and ranking shade tolerance of the tested species. The shade tolerance quantified by the low-light abundance was consistent with empirical classification of shade-tolerance/intolerance groups and successional seral stages of species. Comparison of the shade tolerance between trees of different diameter at breast height (DBH) or height classes further confirmed the reliability of low-light abundance. We conclude that low-light abundance is the most objective and practical of the five most commonly-used methods for measuring and ranking shade tolerance of understory wood species in our study forest, and likely in other forests as well. The simplicity of the method should greatly facilitate the assessment of light niche differentiation between species and thus contribute to understanding coexistence of tree species in forests.},
+  eprint = {30324021},
+  eprinttype = {pmid},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\XVJ6RRTP\\Feng et al. - 2018 - Comparing shade tolerance measures of woody forest.pdf},
+  pmcid = {PMC6183557}
+}
+
 @article{filellaAltitudinalDifferencesUV1999,
   title = {Altitudinal Differences in {{UV}} Absorbance, {{UV}} Reflectance and Related Morphological Traits of {{Quercus}} Ilex and {{Rhododendron}} Ferrugineum in the {{Mediterranean}} Region},
   author = {Filella, Iolanda and Peñuelas, Josep},
@@ -1299,6 +1316,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\8EV9NV3N\\23-9-577.pdf},
   langid = {english},
   number = {9}
+}
+
+@article{franklinShadeAvoidance2008,
+  title = {Shade Avoidance},
+  author = {Franklin, Keara A.},
+  date = {2008},
+  journaltitle = {New Phytologist},
+  volume = {179},
+  pages = {930--944},
+  issn = {1469-8137},
+  doi = {10.1111/j.1469-8137.2008.02507.x},
+  url = {http://nph.onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8137.2008.02507.x},
+  urldate = {2021-01-07},
+  abstract = {Contents Summary 930 V. Crosstalk in shade avoidance signalling 939 I. Introduction 931 VI. Future perspectives 940 II. Shade avoidance responses 932 Acknowledgements 940 III. Photoreceptor regulation of shade avoidance 932 References 940 IV. Molecular mechanisms in shade avoidance signalling 934 Summary The threat to plant survival presented by light limitation has driven the evolution of highly plastic adaptive strategies to either tolerate or avoid shading by neighbouring vegetation. When subject to vegetational shading, plants are exposed to a variety of informational signals, which include altered light quality and a reduction in light quantity. The former includes a decrease in the ratio of red to far-red wavelengths (low R : FR) and is detected by the phytochrome family of plant photoreceptors. Monitoring of R : FR ratio can provide an early and unambiguous warning of the presence of competing vegetation, thereby evoking escape responses before plants are actually shaded. The molecular mechanisms underlying physiological responses to alterations in light quality have now started to emerge, with major roles suggested for the PIF (PHYTOCHROME INTERACTING FACTOR) and DELLA families of transcriptional regulators. Such studies suggest a complex interplay between endogenous and exogenous signals, mediated by multiple photoreceptors. The phenotypic similarities between physiological responses habitually referred to as ‘the shade avoidance syndrome’ and other abiotic stress responses suggest plants may integrate common signalling mechanisms to respond to multiple perturbations in their natural environment.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1469-8137.2008.02507.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\EM582FLA\\Franklin - 2008 - Shade avoidance.pdf;C\:\\Users\\Me\\Zotero\\storage\\5QTVQ9TW\\j.1469-8137.2008.02507.html},
+  keywords = {DELLA,phytochrome,PIF (PHYTOCHROME INTERACTING FACTOR),red to far-red ratio (R : FR),shade avoidance},
+  langid = {english},
+  number = {4}
 }
 
 @article{gebauerEffectsProlongedDrought2015,
@@ -3146,7 +3182,7 @@
   urldate = {2021-01-04},
   abstract = {1 Successional replacement of intolerant species by shade tolerators along gap-understorey gradients is commonly associated with increasingly higher low-light carbon acquisition capacities of more tolerant species. This doctrine has recently been challenged because of evidence demonstrating larger leaf dry mass per unit area (MA), lower photosynthetic capacities and inferior whole plant relative growth rates (RGR) in both high and low irradiance in seedlings of shade-tolerators. However, as the individuals of shade-tolerant species often need to endure canopy shade for many years before gap formation, testing of the carbon gain hypothesis of shade tolerance requires examination of species carbon gain potentials during the entire plant ontogeny. 2 Light vs. MA relationships throughout ontogeny demonstrate that saplings and canopy individuals of shade tolerators do have lower MA than intolerant species, and moderately higher photosynthetic capacities in low light, resulting in greater whole plant carbon gain capacities at lower light. The apparent discrepancy between results from studies on seedlings vs. saplings/trees is due to MA increasing at a faster rate in shade intolerators during ontogeny. A strong positive linkage between seed size and species shade tolerance further implies that shade tolerators have larger initial size, absolute growth rate and survivorship in low light despite their lower RGR. 3 The evidence reviewed collectively suggests that the carbon balance concept of species’ successional position is valid for both seedlings and saplings, and that the apparent discrepancies in species rankings on the basis of structural and physiological characteristics are driven by variations in initial size and rate of ontogeny. Analyses of species shade tolerance potentials should therefore consider how any suite of adaptive traits varies with ontogeny.},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2745.2006.01093.x},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\MJ57KB3X\\Niinemets - 2006 - The controversy over traits conferring shade-toler.pdf;C\:\\Users\\Me\\Zotero\\storage\\KTH2A3WI\\j.1365-2745.2006.01093.html},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KTH2A3WI\\j.1365-2745.2006.01093.html},
   keywords = {absolute growth rate,leaf structure,light availability,minimum light requirement,photosynthetic capacity,plant ontogeny,relative growth rate,shade tolerance,vegetation dynamics},
   langid = {english},
   number = {2}
@@ -3864,6 +3900,24 @@
   number = {3}
 }
 
+@article{quevedo-rojasLeafAcclimationStrategies2018,
+  title = {Leaf Acclimation Strategies to Contrasting Light Conditions in Saplings of Different Shade Tolerance in a Tropical Cloud Forest},
+  author = {Quevedo-Rojas, Ana and García-Núñez, Carlos and Jerez-Rico, Mauricio and Jaimez, Ramón and Schwarzkopf, Teresa},
+  date = {2018-08-22},
+  journaltitle = {Functional Plant Biol.},
+  volume = {45},
+  pages = {968--982},
+  publisher = {{CSIRO PUBLISHING}},
+  issn = {1445-4416},
+  doi = {10.1071/FP17308},
+  url = {http://www.publish.csiro.au/fp/FP17308},
+  urldate = {2021-01-08},
+  abstract = {To study the acclimation responses of the leaves of saplings of six tree species when changed to low or high levels of irradiance, we carried out a light exposure experiment. Species representative of contrasting shade tolerance groups were identified across a light gradient in the understorey of a Venezuelan Andean cloud forest. Measured traits included gas exchange, chlorophyll fluorescence, and morphoanatomical, biochemical and optical properties. Saplings were grown for 6 months in a shade-house receiving 20\% photosynthetic photon flux (PPF) of full sunlight. Plant samples were then moved to shade-houses receiving low PPF (4\%) or high PPF (65\%). A factorial model (species × PPF), with repeated measurements (0, 15 and 120 days) was designed. Our results showed that morphological and anatomical traits were more plastic to PPF changes than photosynthetic traits. All species were susceptible to photoinhibition (15 days): shade-intolerant species showed dynamic photoinhibition (120 days), whereas shade-tolerant species presented chronic photoinhibition and the consequent inability to increase C assimilation rates under high PPF. The partially shade-tolerant species showed mixed responses; nonetheless, they exhibited larger adjustments in morphoanatomical and optical properties. Thus the acclimation responses of these species when subject to contrasting light conditions could help to explain their distribution along the light gradient in the understorey.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BBZ3K7AW\\Quevedo-Rojas et al. - 2018 - Leaf acclimation strategies to contrasting light c.pdf;C\:\\Users\\Me\\Zotero\\storage\\4UQTPBSG\\FP17308.html;C\:\\Users\\Me\\Zotero\\storage\\J3H3SM9S\\FP17308.html},
+  langid = {english},
+  number = {9}
+}
+
 @article{quiggComparingEcophysiologyFour2012,
   title = {Comparing the Ecophysiology of Four Tree Species Growing in the Coastal Temperate Rainforests of {{Prince William Sound}}, {{Alaska}}},
   author = {Quigg, Antonietta},
@@ -4100,6 +4154,25 @@
   number = {n/a}
 }
 
+@article{romero-montepaoneShadeAvoidanceResponses2020,
+  title = {Shade Avoidance Responses Become More Aggressive in Warm Environments},
+  author = {Romero‐Montepaone, Sofía and Poodts, Sofía and Fischbach, Patrick and Sellaro, Romina and Zurbriggen, Matias D. and Casal, Jorge J.},
+  date = {2020},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {43},
+  pages = {1625--1636},
+  issn = {1365-3040},
+  doi = {10.1111/pce.13720},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/pce.13720},
+  urldate = {2021-01-07},
+  abstract = {When exposed to neighbour cues, competitive plants increase stem growth to reduce the degree of current or future shade. The aim of this work is to investigate the impact of weather conditions on the magnitude of shade avoidance responses in Arabidopsis thaliana. We first generated a growth rate database under controlled conditions and elaborated a model that predicts daytime hypocotyl growth as a function of the activity of the main photosensory receptors (phytochromes A and B, cryptochromes 1 and 2) in combination with light and temperature inputs. We then incorporated the action of thermal amplitude to account for its effect on selected genotypes, which correlates with the dynamics of the growth-promoting transcription factor PHYTOCHROME-INTERACTING FACTOR 4. The model predicted growth rate in the field with reasonable accuracy. Thus, we used the model in combination with a worldwide data set of current and future whether conditions. The analysis predicted enhanced shade avoidance responses as a result of higher temperatures due to the geographical location or global warming. Irradiance and thermal amplitude had no effects. These trends were also observed for our local growth rate measurements. We conclude that, if water and nutrients do not become limiting, warm environments enhance the shade avoidance response.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/pce.13720},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\T7I554Y4\\Romero‐Montepaone et al. - 2020 - Shade avoidance responses become more aggressive i.pdf;C\:\\Users\\Me\\Zotero\\storage\\KNUYULMD\\pce.html;C\:\\Users\\Me\\Zotero\\storage\\UBA45J7L\\pce.html},
+  keywords = {global warming,growth,photoreceptors,shade avoidance,temperature},
+  langid = {english},
+  number = {7}
+}
+
 @article{roth-nebelsickComputerbasedAnalysisSteadystate2001,
   title = {Computer-Based Analysis of Steady-State and Transient Heat Transfer of Small-Sized Leaves by Free and Mixed Convection},
   author = {Roth‐Nebelsick, A.},
@@ -4155,6 +4228,24 @@
   keywords = {climate,deciduous,evergreen,leaf mass per area,leaf teeth,leaf thickness,temperature,wood anatomy},
   langid = {english},
   number = {5}
+}
+
+@article{rozendaalPlasticityLeafTraits2006,
+  title = {Plasticity in Leaf Traits of 38 Tropical Tree Species in Response to Light; Relationships with Light Demand and Adult Stature},
+  author = {Rozendaal, D. M. A. and Hurtado, V. H. and Poorter, L.},
+  date = {2006-04-01},
+  journaltitle = {Functional Ecology},
+  volume = {20},
+  pages = {207--216},
+  publisher = {{John Wiley \& Sons, Ltd}},
+  issn = {1365-2435},
+  doi = {10.1111/j.1365-2435.2006.01105.x},
+  url = {http://besjournals.onlinelibrary.wiley.com/doi/10.1111/j.1365-2435.2006.01105.x},
+  urldate = {2021-01-09},
+  abstract = {1 The sun–shade acclimation and plasticity of 16 functional leaf traits of 38 tropical tree species were studied in relation to their light demand, maximum adult stature and ontogenetic changes in...},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\VPNTCUFP\\Rozendaal et al. - 2006 - Plasticity in leaf traits of 38 tropical tree spec.pdf;C\:\\Users\\Me\\Zotero\\storage\\CUI2RJUG\\j.1365-2435.2006.01105.html;C\:\\Users\\Me\\Zotero\\storage\\YRN7ID2T\\j.1365-2435.2006.01105.html},
+  langid = {english},
+  number = {2}
 }
 
 @article{ruehrWaterAvailabilityDominant2016,
@@ -5311,6 +5402,25 @@
   url = {https://sts.si.edu/adfs/ls/},
   urldate = {2020-08-02},
   file = {C\:\\Users\\Me\\Zotero\\storage\\X8WWGVGC\\ls.html}
+}
+
+@article{wrightFunctionalTraitsGrowth2010,
+  title = {Functional Traits and the Growth–Mortality Trade-off in Tropical Trees},
+  author = {Wright, S. Joseph and Kitajima, Kaoru and Kraft, Nathan J. B. and Reich, Peter B. and Wright, Ian J. and Bunker, Daniel E. and Condit, Richard and Dalling, James W. and Davies, Stuart J. and Díaz, Sandra and Engelbrecht, Bettina M. J. and Harms, Kyle E. and Hubbell, Stephen P. and Marks, Christian O. and Ruiz-Jaen, Maria C. and Salvador, Cristina M. and Zanne, Amy E.},
+  date = {2010},
+  journaltitle = {Ecology},
+  volume = {91},
+  pages = {3664--3674},
+  issn = {1939-9170},
+  doi = {10.1890/09-2335.1},
+  url = {http://esajournals.onlinelibrary.wiley.com/doi/abs/10.1890/09-2335.1},
+  urldate = {2021-01-07},
+  abstract = {A trade-off between growth and mortality rates characterizes tree species in closed canopy forests. This trade-off is maintained by inherent differences among species and spatial variation in light availability caused by canopy-opening disturbances. We evaluated conditions under which the trade-off is expressed and relationships with four key functional traits for 103 tree species from Barro Colorado Island, Panama. The trade-off is strongest for saplings for growth rates of the fastest growing individuals and mortality rates of the slowest growing individuals (r2 = 0.69), intermediate for saplings for average growth rates and overall mortality rates (r2 = 0.46), and much weaker for large trees (r2 ≤ 0.10). This parallels likely levels of spatial variation in light availability, which is greatest for fast- vs. slow-growing saplings and least for large trees with foliage in the forest canopy. Inherent attributes of species contributing to the trade-off include abilities to disperse, acquire resources, grow rapidly, and tolerate shade and other stresses. There is growing interest in the possibility that functional traits might provide insight into such ecological differences and a growing consensus that seed mass (SM), leaf mass per area (LMA), wood density (WD), and maximum height (Hmax) are key traits among forest trees. Seed mass, LMA, WD, and Hmax are predicted to be small for light-demanding species with rapid growth and mortality and large for shade-tolerant species with slow growth and mortality. Six of these trait–demographic rate predictions were realized for saplings; however, with the exception of WD, the relationships were weak (r2 {$<$} 0.1 for three and r2 {$<$} 0.2 for five of the six remaining relationships). The four traits together explained 43–44\% of interspecific variation in species positions on the growth–mortality trade-off; however, WD alone accounted for {$>$}80\% of the explained variation and, after WD was included, LMA and Hmax made insignificant contributions. Virtually the full range of values of SM, LMA, and Hmax occurred at all positions on the growth–mortality trade-off. Although WD provides a promising start, a successful trait-based ecology of tropical forest trees will require consideration of additional traits.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1890/09-2335.1},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\Y6XWRQXL\\Wright et al. - 2010 - Functional traits and the growth–mortality trade-o.pdf;C\:\\Users\\Me\\Zotero\\storage\\3M3CW9YN\\09-2335.html;C\:\\Users\\Me\\Zotero\\storage\\9QW9YTQN\\09-2335.html},
+  keywords = {Barro Colorado Island,growth rates,leaf mass per area,maximum height,maximum size,mortality rates,Panama,seed mass,seed size,wood density},
+  langid = {english},
+  number = {12}
 }
 
 @article{wrightGlobalClimaticDrivers2017,
